Fix blurry text issue

--- a/style.css
+++ b/style.css
@@ -21,33 +21,27 @@ a:hover {
 }
 
 a {
+	display:inline-block;
 	position: relative;
-	text-decoration: none;
+	color: #494949;
+
 }
-a:before {
+a:after {
 	content: '';
-	position: absolute;
-	width: 100%;
-	height: 2px;
-	bottom: -2px;
+	display: block;
+	position: relative;
+	bottom: -3px;
 	left: 0;
-	background-color: #494949;
-	visibility: hidden;
-	/*backface-visibility: hidden;*/
-	/*transform: translateZ(0);*/
-	-webkit-transform: scaleX(0);
-	-moz-transform: scaleX(0);
-	transform: scaleX(0);
-	-webkit-transition: transform 0.3s;
-	transition: transform 0.3s;
-
+	margin: auto;
+	height: 2px;
+	width: 0px;
+	background: transparent;
+	transition: width .3s ease, background-color .3s ease;
 }
 
-a:hover:before {
-	visibility: visible;
-	-webkit-transform: scaleX(1);
-	-moz-transform: scaleX(1);
-	transform: scaleX(1);
+a:hover:after {
+	width: 100%;
+	background: #494949;
 }
 
 p, li {
@@ -192,9 +186,9 @@ li {
 	width: 100%;
 	height: 100%;
 }
-#picture > a:before {
-	content: none;
+#picture > a:after {
+	width: 0;
 }
-#picture > a:hover:before {
-	visibility: hidden;
+#picture > a:hover:after {
+	width: 0;
 }
